# club-run

./: # Code Citations.md  .env.production  .gitattributes  .gitignore  .vercelignore  AGENT_SYSTEM_ALIGNMENT_GUIDE.md  API_DOCUMENTATION.md  AUTHENTICATION_DEMO_GUIDE.md  AUTHENTICATION_SYSTEM.md  BLANK_SCREEN_FIX_SUMMARY.md  CHATGPT_INTEGRATION_GUIDE.md  CHATGPT_INTEGRATION_SUMMARY.md  CLEANUP_STATUS_SUMMARY.md  CLUB_RUN_REPOSITORIES_SUMMARY.md  COMMUNITY_ANNOUNCEMENT.md  CURATOR_ROLE_DOCUMENTATION.md  CURRENT_SETUP_SUMMARY.md  DEMO_ACCOUNTS_CREDENTIALS.md  DEPLOYMENT_GUIDE.md  DEPLOYMENT_SUCCESS_SUMMARY.md  DJ_SERVICE_PACK_INTEGRATION_SUMMARY.md  DJ_VERIFICATION_FEATURE_SUMMARY.md  DOORDASH_LIKE_FEATURES_IMPLEMENTATION.md  Dockerfile  Dockerfile.frontend  ENHANCED_AGENT_FLOW_IMPLEMENTATION_SUMMARY.md  ENHANCED_DASHBOARD_IMPLEMENTATION_SUMMARY.md  ENHANCED_EXPENSES_SYSTEM.md  EXPENSE_SYSTEM_UPDATE_SUMMARY.md  GITHUB_SETUP_GUIDE.md  GOOGLE_OAUTH_SETUP.md  GO_ONLINE_SYSTEM_DOCUMENTATION.md  GUIDED_TOUR_IMPLEMENTATION.md  HYBRID_SYSTEM_IMPLEMENTATION_GUIDE.md  IMPLEMENTATION_SUMMARY.md  INTERACTIVE_HOMEPAGE_IMPLEMENTATION.md  MISSION_CREATION_CARDS_UPDATE_SUMMARY.md  MISSION_EXPERIENCE_IMPLEMENTATION.md  MISSION_STRUCTURE_UPDATE_SUMMARY.md  ORCHESTRATION_FLOW_TEST.md  (+92 more)
api/: auth.js  index.js
assets/: index-835ac900.css  index-f8a7f72c.js  index-f8a7f72c.js.map
backend/: .env  .env.production  ENHANCED_AGENT_FLOW_README.md  README.md  SETUP.md  apply-rbac-fixes.sh  check-users.js  create-admin-users.js  create-all-users.js  demo-enhanced-flow.js  env.example  env.production.example  list-users.js  package-lock.json  package.json  pyproject.toml  requirements.txt  reset-user-role.js  setup-chatgpt-env.sh  setup-env.sh  test-enhanced-flow.js  test-rbac-security.js  test-server.js  test.js  update-user-names.js  vercel.json
backend/middleware/: privyAuth.js
backend/prisma/: dev.db-journal  schema.prisma  seed.js
backend/prisma/migrations/20250819231025_club_run/: migration.sql
backend/prisma/migrations/20250820132409_add_google_oauth_fields/: migration.sql
backend/prisma/migrations/20250820202703_add_user_roles/: migration.sql
backend/prisma/migrations/20250823171253_init_curator_system/: migration.sql
backend/prisma/migrations/20250824030631_new_mig/: migration.sql
backend/prisma/migrations/20251226042917_add_online_status/: migration.sql
backend/routes/: privyAuth.js
backend/src/: server.js  simple-server.js
backend/src/agents/: MissionAssignmentAgent.js  ReportingAgent.js  ResearchAgent.js  RoleBasedAgentSystem.js
backend/src/auth/: AuthController.js
backend/src/middleware/: auth.js  rbac.js
backend/src/reports/: WeeklyReportGenerator.js
backend/src/routes/: admin.js  agents.js  auth.js  chat.js  checkins.js  demo.js  expenses.js  missions.js  orchestration.js  p2p-missions.js  serato-file-verification.js  serato.js  teams.js  users.js  venues.js
backend/src/services/: copilotService.js  monitoringService.js
backend/src/services/ai/: BlockchainAIIntegrationService.js  EnhancedChatGPTService.js  EnhancedOrchestrationService.js  OrchestrationService.js
backend/src/services/ipfs/: IPFSService.js
backend/src/services/payments/: HybridPaymentService.js
backend/src/services/serato/: MockSeratoDataGenerator.js  SeratoFileVerificationService.js  SeratoIntegrationService.js
backend/src/services/verification/: MissionVerificationService.js
backend/src/utils/: auth.js
backend/src/websocket/: handlers.js
club-run-nextjs/: IMPLEMENTATION_SUMMARY.md  LANGGRAPH_IMPLEMENTATION.md  README.md  env.example  langgraph.env.example  package-lock.json  package.json  setup.sh
club-run-nextjs/prisma/: schema.prisma  seed.ts
club-run-nextjs/src/: middleware.ts
club-run-nextjs/src/app/: layout.tsx  page.tsx
club-run-nextjs/src/components/: AuthButtons.tsx  Dashboard.tsx
club-run-nextjs/src/lib/: auth.ts  rbac.ts
club-run-nextjs/src/types/: AgentState.ts  next-auth.d.ts
contracts/: ClubRunHybridSystem.sol  ClubRunP2PEscrow.sol  hardhat.config.js  package.json
contracts/scripts/: deploy.js
frontend/: .env.example  CONNECTION_GUIDE.md  HTML_STRUCTURE_SUMMARY.md  README.md  ROLE_BASED_UI_AGENT.md  index.html  next.config.js  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/js/: app.js
frontend/public/: manifest.json  sw.js
frontend/src/: App.css  App.tsx  index.css  main.tsx
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: AdminDashboard.tsx  ChatBot.tsx  FeaturesSection.tsx  Header.tsx  HeroSection.tsx  InteractiveModals.tsx  ProtectedRoute.tsx  ProtectedRoutePrivy.tsx  QuickActions.tsx  RBACDebug.tsx  RoleFeatures.tsx  UIAgentCard.tsx  UISettingsPanel.tsx
frontend/src/config/: environment.ts
frontend/src/contexts/: AuthContext.tsx  PrivyAuthContext.tsx  RBACContext.tsx  UIAgentContext.tsx
frontend/src/hooks/: useSocket.ts
frontend/src/lib/: api.ts
frontend/src/pages/: AgentDashboard.css  AgentDashboard.tsx  AuthCallback.tsx  Contact.tsx  CuratorDashboard.tsx  CuratorThankYou.tsx  Dashboard.tsx  EnhancedAgentDashboard.tsx  Expenses.tsx  Features.tsx  Home.tsx  MissionCreate.tsx  MissionDashboard.tsx  MissionTest.tsx  Missions.tsx  P2PMissions.tsx  Profile.tsx  SeratoCallback.tsx
frontend/src/services/: api.ts
frontend/src/store/: useAppStore.ts
frontend/src/types/: index.ts
frontend/styles/: globals.css
monitoring/: prometheus.yml
prisma/: dev.db-journal  schema.prisma
prisma/migrations/20250823035134_init/: migration.sql
(+68 files in other folders)
